--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,12 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "moment": "^2.24.0",
     "react": "^16.13.1",
+    "react-date-picker": "^8.0.1",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.1",
+    "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-transition-group": "^1.2.1",
