--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.4.1",
     "moment": "^2.24.0",
     "react": "^16.13.1",
+    "react-confirm-alert": "^2.6.1",
     "react-date-picker": "^8.0.1",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.1",
